dependencies/mariadb/mariadb-deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mariadb-instance
  namespace: mariadb
  labels:
    app: mariadb-instance
    component: data-science-pipelines
    dspa: instance
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: mariadb-instance
      component: data-science-pipelines
      dspa: instance
  template:
    metadata:
      labels:
        app: mariadb-instance
        component: data-science-pipelines
        dspa: instance
    spec:
      serviceAccountName: ds-pipelines-mariadb-sa-instance
      containers:
        - name: mariadb
          image: registry.redhat.io/rhel8/mariadb-103:1-188
          ports:
            - containerPort: 3306
          readinessProbe:
            exec:
              command:
                - /bin/sh
                - "-i"
                - "-c"
                - >-
                  MYSQL_PWD=$MYSQL_PASSWORD mysql -h 127.0.0.1 -u $MYSQL_USER -D
                  $MYSQL_DATABASE -e 'SELECT 1'
            failureThreshold: 3
            initialDelaySeconds: 5
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          livenessProbe:
            failureThreshold: 3
            initialDelaySeconds: 30
            periodSeconds: 10
            successThreshold: 1
            tcpSocket:
              port: 3306
            timeoutSeconds: 1
          resources:
            requests:
              cpu: 300m
              memory: 800Mi
            limits:
              cpu: "1"
              memory: 1Gi
          volumeMounts:
            - name: mariadb-persistent-storage
              mountPath: /var/lib/mysql
      volumes:
        - name: mariadb-persistent-storage
          persistentVolumeClaim:
            claimName: mariadb-pvc
          # emptyDir: {}
